--- a/ntiss.ui
+++ b/ntiss.ui
@@ -40,22 +40,27 @@
      <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="Widget_Painter" name="widget" native="true">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>20</y>
-      <width>60</width>
-      <height>16</height>
+      <x>29</x>
+      <y>19</y>
+      <width>341</width>
+      <height>191</height>
      </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>Widget_Painter</class>
+   <extends>QWidget</extends>
+   <header location="global">widget_painter.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
