--- a/ntiss.ui
+++ b/ntiss.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>609</width>
+    <width>626</width>
     <height>600</height>
    </rect>
   </property>
@@ -60,7 +60,7 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>520</x>
       <y>530</y>
       <width>91</width>
       <height>32</height>
@@ -75,7 +75,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>481</width>
+      <width>500</width>
       <height>550</height>
      </rect>
     </property>
@@ -93,8 +93,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>481</width>
-       <height>551</height>
+       <width>500</width>
+       <height>550</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -111,7 +111,7 @@
    <widget class="QPushButton" name="pushButton_6">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>536</x>
       <y>420</y>
       <width>60</width>
       <height>32</height>
@@ -124,7 +124,7 @@
    <widget class="QPushButton" name="pushButton_7">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>510</x>
       <y>450</y>
       <width>60</width>
       <height>32</height>
@@ -137,7 +137,7 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>536</x>
       <y>480</y>
       <width>60</width>
       <height>32</height>
@@ -150,7 +150,7 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>550</x>
+      <x>568</x>
       <y>450</y>
       <width>60</width>
       <height>32</height>
@@ -163,7 +163,7 @@
    <widget class="QPushButton" name="btn_draw_ec">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>520</x>
       <y>170</y>
       <width>91</width>
       <height>32</height>
@@ -176,7 +176,7 @@
    <widget class="QPushButton" name="btn_draw_src">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>520</x>
       <y>140</y>
       <width>91</width>
       <height>32</height>
@@ -189,7 +189,7 @@
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>520</x>
       <y>30</y>
       <width>88</width>
       <height>32</height>
@@ -624,7 +624,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>530</x>
       <y>60</y>
       <width>60</width>
       <height>16</height>
@@ -1070,6 +1070,32 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QPushButton" name="btn_zoom_in">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>390</y>
+      <width>91</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>缩小</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_zoom_out">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>360</y>
+      <width>91</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>放大</string>
+    </property>
+   </widget>
    <zorder>pushButton</zorder>
    <zorder>pushButton_6</zorder>
    <zorder>pushButton_7</zorder>
@@ -1081,6 +1107,8 @@
    <zorder>comboBox</zorder>
    <zorder>label</zorder>
    <zorder>label_2</zorder>
+   <zorder>btn_zoom_in</zorder>
+   <zorder>btn_zoom_out</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
@@ -1090,8 +1118,14 @@
    <extends>QFrame</extends>
    <header location="global">frame_painter.h</header>
    <container>1</container>
+   <slots>
+    <signal>signal1()</signal>
+   </slots>
   </customwidget>
  </customwidgets>
  <resources/>
  <connections/>
+ <slots>
+  <slot>slot_111()</slot>
+ </slots>
 </ui>
